--- a/css/layout/index/modal-burger.css
+++ b/css/layout/index/modal-burger.css
@@ -1,3 +1,10 @@
+/* */
+@media screen and (min-width: 768px) {
+    .mobail-menu {
+        display: none;
+    }
+}
+
 @media screen and (max-width: 767px) {
     .mobail-menu {
         position: fixed;
@@ -147,3 +154,4 @@
     }
     
 }
+
