--- a/css/layout/index/section-one.css
+++ b/css/layout/index/section-one.css
@@ -70,6 +70,9 @@
     .index-section-one {
         background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
             url('../../../images/index/bg-img/tablet-bcg-1x.png');
+        
+        padding-top: 40px;
+        padding-bottom: 112px;
     }
 
     @media (min-device-pixel-ratio: 2),
@@ -94,6 +97,9 @@
 
 @media screen and (min-width: 1200px) {
     .index-section-one {
+        padding-top: 188px;
+        padding-bottom: 188px;
+        
         background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
             url('../../../images/index/bg-img/desktop-bcg-1x.png');
     }
