--- a/css/layout/index/section-two.css
+++ b/css/layout/index/section-two.css
@@ -80,6 +80,7 @@
     }
 
     .headerthree-in-li {
+        text-align: start;
         margin-bottom: 8px;
         font-weight: 500;
         font-size: 20px;
